<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/greyDark">

            <TextView
                android:id="@+id/input"
                style="@style/scrollableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:paddingStart="1dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="60sp" />
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/greyDark">

            <TextView
                android:id="@+id/output"
                style="@style/scrollableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:paddingStart="1dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/greyLight"
                android:textSize="50sp" />
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button4"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button1"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button0"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_0" />
        </LinearLayout>

        <LinearLayout
            style="@style/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <Button
                android:id="@+id/button8"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button5"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button2"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot" />
        </LinearLayout>


        <LinearLayout
            style="@style/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button9"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button6"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button3"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3" />

            <Button
                android:id="@+id/buttonEvaluate"
                style="@style/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/evaluate" />
        </LinearLayout>

        <LinearLayout
            style="@style/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDelete"
                style="@style/operator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/operator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/operator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/operator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtract" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/operator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
